# fp1

./: README.md  lab.cabal
src/: Main.hs
src/Lab/: Arguments.hs  CSV.hs  FCM.hs
test/Lab/: CSVSpec.hs  FCMSpec.hs
