name:             lab
version:          0.0.0
license:          MIT
build-type:       Simple
cabal-version:    >= 1.8

executable fcm
  main-is:        Main.hs
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  -- exposed-modules:
      -- Data.String.Strip
  build-depends:
      base    == 4.*
    , containers
    , csv
    , vector
    , random
    , split

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Lab.CSV
      Lab.Arguments
      Lab.FCM
  build-depends:
      base    == 4.*
    , containers
    , csv
    , vector
    , random
    , split

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , lab
    , hspec   == 2.*
    , vector
    , random
    , split
